--- a/jxz.htm
+++ b/jxz.htm
@@ -1,3 +1,4 @@
+<title>å°æ—é•œåƒç«™</title>
 <html xmlns:v="urn:schemas-microsoft-com:vml"
 xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
@@ -21,9 +22,9 @@ xmlns="http://www.w3.org/TR/REC-html40">
  var c_lTabs=3;
 
  var c_rgszSh=new Array(c_lTabs);
- c_rgszSh[0] = "¾µÏñ";
- c_rgszSh[1] = "×ÊÔ´ÖĞĞÄ";
- c_rgszSh[2] = "°ì¹«Èí¼ş×¨Çø";
+ c_rgszSh[0] = "é•œåƒ";
+ c_rgszSh[1] = "èµ„æºä¸­å¿ƒ";
+ c_rgszSh[2] = "åŠå…¬è½¯ä»¶ä¸“åŒº";
 
 
 
@@ -91,7 +92,7 @@ function fnBuildTabStrip()
  szHTML =
   "<html><head>"+
   "<style>A:link,A:visited,A:active {text-decoration:none;"+"color:"+c_rgszClr[3]+";}"+
-  ".clTab {cursor:hand;background:"+c_rgszClr[1]+";font:9pt ËÎÌå;padding-left:3px;padding-right:3px;text-align:center;}"+
+  ".clTab {cursor:hand;background:"+c_rgszClr[1]+";font:9pt å®‹ä½“;padding-left:3px;padding-right:3px;text-align:center;}"+
   ".clBorder {background:"+c_rgszClr[2]+";font:1pt;}"+
   "</style></head><body onload=\"parent.fnInit();\" onselectstart=\"event.returnValue=false;\" ondragstart=\"event.returnValue=false;\" bgcolor="+c_rgszClr[4]+
   " topmargin=0 leftmargin=0><table id=tbTabs cellpadding=0 cellspacing=0>";
@@ -301,15 +302,15 @@ function fnSetActiveSheet(iSh)
  <x:ExcelWorkbook>
   <x:ExcelWorksheets>
    <x:ExcelWorksheet>
-    <x:Name>¾µÏñ</x:Name>
+    <x:Name>é•œåƒ</x:Name>
     <x:WorksheetSource HRef="jxz.files/sheet001.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>×ÊÔ´ÖĞĞÄ</x:Name>
+    <x:Name>èµ„æºä¸­å¿ƒ</x:Name>
     <x:WorksheetSource HRef="jxz.files/sheet002.htm"/>
    </x:ExcelWorksheet>
    <x:ExcelWorksheet>
-    <x:Name>°ì¹«Èí¼ş×¨Çø</x:Name>
+    <x:Name>åŠå…¬è½¯ä»¶ä¸“åŒº</x:Name>
     <x:WorksheetSource HRef="jxz.files/sheet003.htm"/>
    </x:ExcelWorksheet>
   </x:ExcelWorksheets>
@@ -329,7 +330,7 @@ function fnSetActiveSheet(iSh)
  <frame src="jxz.files/tabstrip.htm" name="frTabs" marginwidth=0 marginheight=0>
  <noframes>
   <body>
-   <p>´ËÒ³ÃæÊ¹ÓÃÁË¿ò¼Ü£¬¶øÄúµÄä¯ÀÀÆ÷²»Ö§³Ö¿ò¼Ü¡£</p>
+   <p>æ­¤é¡µé¢ä½¿ç”¨äº†æ¡†æ¶ï¼Œè€Œæ‚¨çš„æµè§ˆå™¨ä¸æ”¯æŒæ¡†æ¶ã€‚</p>
   </body>
  </noframes>
 </frameset>
